# kotinjection

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pythonpublish.yml  unittest.yml
docs/: api_reference.md
kotinjection/: __init__.py  api.py  component.py  container.py  context.py  core.py  create_scope_proxy.py  definition.py  definition_builder.py  dry_run_placeholder.py  exceptions.py  factory_builder.py  get_proxy.py  global_context.py  global_create_scope_proxy.py  global_typed_create_scope.py  inject_descriptor.py  inject_proxy.py  lifecycle.py  module.py  module_get_proxy.py  resolution_context.py  scope.py  scope_definition_context.py  scope_definition_proxy.py  scope_get_proxy.py  scoped_builder.py  singleton_builder.py  typed_create_scope.py
tests/: conftest.py  fixtures.py  test_class_based_api.py  test_context_isolation.py  test_definition.py  test_eager_init.py  test_error_messages.py  test_forward_references.py  test_generic_types.py  test_get_proxy.py  test_inject_descriptor.py  test_interface_impl.py  test_lifecycle.py  test_module_get_index.py  test_module_get_with_type.py  test_performance.py  test_resolution_context.py  test_scoped.py  test_single_type_registration.py  test_thread_safety.py  test_type_inference.py
